# self-checkout-ml

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/api/: deps.py  main.py
app/api/routes/: datasets.py  inference.py  label_studio.py  scale_snapshots.py  session_snapshots.py  shelf_snapshots.py  train.py  utils.py
app/core/: config.py  datasets.py  inference.py  label_studio.py  object_storage.py  training.py
scripts/: extract_labeled_objects.py
tests/: test_config.py  test_object_storage.py
